@@ -109,6 +109,7 @@
       <class name="test.github765.ExcludeSyntheticMethodsFromTemplateCallsTest"/>
       <class name="test.github1405.TestExclusionOfMainMethod"/>
       <class name="test.cli.CliTest"/>
+      <class name="test.cli.github2974.OverrideGroupsCliTest"/>
       <class name="test.thread.ParallelSuiteTest"/>
       <class name="test.simple.IncludedExcludedTest" />
       <class name="test.reports.ReportTest" />
